--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/aard"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:resizeableActivity="false"
         android:theme="@style/AppTheme">
         <activity android:name=".HomeActivity">
             <intent-filter>
@@ -29,7 +30,8 @@
         </activity>
         <activity
             android:name=".DBEditActivity"
-            android:label="@string/edit_db_title" >
+            android:label="@string/edit_db_title"
+            android:configChanges="orientation|screenSize" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomeActivity" />
